--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,13 +5,18 @@ website:
   title: "ISSS608-VAA"
   navbar:
     left:
+    - text: "Hands-on Exercise"
+      menu:
+      - text: "Hands-on Exercise 1"
+        href: "Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01.html"
+    right:    
       - href: index.qmd
         text: Home
       - about.qmd
 
 format:
   html:
-    theme: cosmo
+    theme: Minty
     css: styles.css
     toc: true
 
