Add in in class ex01

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,8 +7,12 @@ website:
     left:
     - text: "Hands-on Exercise"
       menu:
-      - text: "Hands-on Exercise 1"
-        href: "Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01.html"
+        - text: "Hands-on Exercise 1"
+          href: "Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01.qmd"
+    - text: "In Class Exercise"
+      menu:
+        - text: "In Class Exercise 1"
+          href: "InClassEx/In-class_Ex01/In-class_Ex01.qmd"
     right:    
       - href: index.qmd
         text: Home
