--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,8 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02.qmd"
         - text: "Hands-on Exercise 3"
           href: "Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.qmd"
+        - text: "Hands-on Exercise 3 Part 2"
+          href: "Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03Part2.qmd"
     - text: "In Class Exercise"
       menu:
         - text: "In Class Exercise 1"
@@ -29,6 +31,10 @@ format:
     theme: Minty
     css: styles.css
     toc: true
-
+    
+executive:
+  echo: false
+  eval: true
+  warning: false
 editor: visual
 
