--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,6 +21,8 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04Chpt10.qmd"  
         - text: "Hands-on Exercise 5"
           href: "Hands-on_Ex/Hands-on_Ex05/Hands-on_Ex05.qmd" 
+        - text: "Hands-on Exercise 6"
+          href: "Hands-on_Ex/Hands-on_Ex06/Hands-on_Ex06.qmd" 
     - text: "In Class Exercise"
       menu:
         - text: "In Class Exercise 1"
@@ -31,6 +33,8 @@ website:
           href: "InClassEx/In-class_Ex04/In-class_Ex04.qmd"
         - text: "In Class Exercise 5"
           href: "InClassEx/In-class_Ex05/In-class_Ex05.qmd"
+        - text: "In Class Exercise 7"
+          href: "InClassEx/In-class_Ex07/In-class_Ex07.qmd"
     - text: "Take Home Exercise"
       menu:
         - text: "Take Home Exercise 1"
