--- a/_quarto.yml
+++ b/_quarto.yml
@@ -40,7 +40,9 @@ website:
         - text: "Take Home Exercise 1"
           href: "TakeHomeEx/TakeHomeEx1/TakehomeExercise1.qmd"
         - text: "Take Home Exercise 2"
-          href: "TakeHomeEx/TakeHomeEx2/TakehomeExercise2.qmd"
+          href: "TakeHomeEx/TakeHomeEx2/TakehomeEx2.qmd"
+        - text: "Take Home Exercise 3"
+          href: "TakeHomeEx/TakeHomeEx3/TakehomeEx03.qmd"
         
     right:    
       - href: index.qmd
