--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,11 +38,11 @@ website:
     - text: "Take Home Exercise"
       menu:
         - text: "Take Home Exercise 1"
-          href: "TakeHomeEx/TakeHomeEx1/TakehomeExercise1.qmd"
+          href: "TakeHomeEx/TakeHomeEx1/TakehomeExercise1.html"
         - text: "Take Home Exercise 2"
-          href: "TakeHomeEx/TakeHomeEx2/TakehomeEx2.qmd"
+          href: "TakeHomeEx/TakeHomeEx2/TakehomeEx2.html"
         - text: "Take Home Exercise 3"
-          href: "TakeHomeEx/TakeHomeEx3/TakehomeEx03.qmd"
+          href: "TakeHomeEx/TakeHomeEx3/TakehomeEx03.html"
         
     right:    
       - href: index.qmd
